5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1582_2897.log
== TEST (2019-03-31 00:20:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(quatorze))

# Impressao do dobro do numero
print(num)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input(quatorze))
NameError: name 'quatorze' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:20:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
141234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:21:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.172603
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
141234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
14444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:23:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print("dobro", num*2)
-- OUTPUT:
14dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:24:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
142468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:27:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("14"))

# Impressao do dobro do numero
print("dobro", num*2)
-- OUTPUT:
dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:29:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("14"))

# Impressao do dobro do numero
print("dobro", num)
-- OUTPUT:
dobro 1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:30:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("14"))

# Impressao do dobro do numero
print("imprima o dobro", num)
-- OUTPUT:
imprima o dobro 1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:31:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("14"))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:31:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
142468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:33:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print("dobro:", num*2)
-- OUTPUT:
14dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:33:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print("28", num*2)
-- OUTPUT:
1428 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:34:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print("num*2")
-- OUTPUT:
14num*2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:35:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input14

# Impressao do dobro do numero
print("num*2")
-- ERROR:
File "XXXX", line 7
    print("num*2")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:37:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(7*2))

# Impressao do dobro do numero
print('dobro:', num*2)
-- OUTPUT:
14dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:40:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print('dobro', num*2)
-- OUTPUT:
14dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:40:55) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print('dobro', num*2)
-- EXECUTION TIME:
0.135697
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
14dobro 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
14dobro 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:41:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print('dobro', num*2)
-- OUTPUT:
14dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:41:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(14)

# Impressao do dobro do numero
print('dobro', num*2)
-- OUTPUT:
dobro 28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:42:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(14)

# Impressao do dobro do numero
print('dobro:', num*2)
-- OUTPUT:
dobro: 28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:42:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print('28', num*2)
-- OUTPUT:
1428 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:47:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
142468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:47:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.177883
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
142468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
14888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:47:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
142468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:49:55) 
-- CODE:
# Use este codigo como ponto de partida
14
# Leitura de valores de entrada e conversao para inteiro
num = int(input(14))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
142468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:50:07) 
-- CODE:
# Use este codigo como ponto de partida
14
# Leitura de valores de entrada e conversao para inteiro
num = int(input(11))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
112468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:50:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(1))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
12468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:51:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print(12*2)
-- OUTPUT:
1224
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:55:53) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("12"))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:56:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(12)

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:56:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(12)

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.224171
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:57:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print(num+num)
-- OUTPUT:
122468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:57:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print(num+num)
-- OUTPUT:
122468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:58:09) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print(num^2)
-- OUTPUT:
121232
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:58:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print(num^2)
-- EXECUTION TIME:
0.141003
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
121232
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12446
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:59:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print()
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:59:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12)

# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 7
    print(num*2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:00:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12)

# Impressao do dobro do numero
print("dobro", num*2)
-- ERROR:
File "XXXX", line 7
    print("dobro", num*2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:01:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print("dobro", num*2)
-- OUTPUT:
12dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:02:07) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))

# Impressao do dobro do numero
print("dobro:", num*2)
-- OUTPUT:
12dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:02:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12))
# Impressao do dobro do numero
print("dobro:", num*2)
-- OUTPUT:
12dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:04:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input(12)
# Impressao do dobro do numero
print("dobro:", num*2)
-- OUTPUT:
12dobro: 12341234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:04:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = input(12)
# Impressao do dobro do numero
print (num*2)
-- OUTPUT:
1212341234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:05:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12)
# Impressao do dobro do numero
print (num*2)
-- ERROR:
File "XXXX", line 6
    print (num*2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:05:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12)
# Impressao do dobro do numero
print(num*2)
-- ERROR:
File "XXXX", line 6
    print(num*2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:07:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12)
			 
# Impressao do dobro do numero
			 print("dobro", num*2)
-- ERROR:
File "XXXX", line 7
    print("dobro", num*2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:08:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12):
			 
# Impressao do dobro do numero
 print("dobro", num*2)
-- ERROR:
File "XXXX", line 4
    num = int(input(12):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:08:46) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(12)
			 
# Impressao do dobro do numero
 print("dobro:", num*2)
-- ERROR:
File "XXXX", line 7
    print("dobro:", num*2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:44:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero"))
			 
# Impressao do dobro do numero
print("dobro:", num*2)
-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:44:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero"))
11
# Impressao do dobro do numero
print("dobro:", num*2)
-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:47:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int()

# Impressao do dobro do numero
print()
-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:54:33) 
-- CODE:
# Use este codigo como ponto de partida
numero = 2
# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))


# Impressao do dobro do numero
print(dobro'dobro', numero*2)
-- ERROR:
File "XXXX", line 8
    print(dobro'dobro', numero*2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:54:43) 
-- CODE:
# Use este codigo como ponto de partida
numero = 2
# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))


# Impressao do dobro do numero
print('dobro', numero*2)
-- OUTPUT:
2dobro 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 01:54:49) 
-- CODE:
# Use este codigo como ponto de partida
numero = 2
# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))


# Impressao do dobro do numero
print('dobro', numero*2)
-- EXECUTION TIME:
0.147791
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2dobro 4
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2dobro 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:54:58) 
-- CODE:
# Use este codigo como ponto de partida
numero = 2
# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))


# Impressao do dobro do numero
print('dobro', num*2)
-- OUTPUT:
2dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 01:55:05) 
-- CODE:
# Use este codigo como ponto de partida
numero = 2
# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))


# Impressao do dobro do numero
print('dobro', num*2)
-- EXECUTION TIME:
0.210966
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2dobro 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
2dobro 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 01:55:22) 
-- CODE:
# Use este codigo como ponto de partida
numero = 2
# Leitura de valores de entrada e conversao para inteiro
num = int(input(2))


# Impressao do dobro do numero
print('dobro', num*2)
-- OUTPUT:
2dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:03:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("2"))

# Impressao do dobro do numero
print('dobro', num*2)

-- OUTPUT:
dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:04:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print('dobro', num*2)

-- OUTPUT:
dobro 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:04:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print('dobro:', num*2)

-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:05:14) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print('dobro:', num*2)

-- EXECUTION TIME:
0.166645
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
dobro: 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
dobro: 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:05:25) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print('dobro:',num*2)

-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:05:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print('dobro:',num*2)

-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:06:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print('dobro:',num*2)

-- EXECUTION TIME:
0.178435
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
dobro: 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
dobro: 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:06:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print("dobro:",num*2)

-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:07:22) 
-- CODE:
# Use este codigo como ponto de partida
input(12)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print("dobro:",num*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:07:35) 
-- CODE:
# Use este codigo como ponto de partida
input(12)
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print("dobro:",num*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    num = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:09:17) 
-- CODE:
# Use este codigo como ponto de partida
num =
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print("dobro:",num*2)

-- ERROR:
File "XXXX", line 2
    num =
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:09:37) 
-- CODE:
# Use este codigo como ponto de partida
num = 12
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print("dobro:",num*2)

-- OUTPUT:
dobro: 2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:09:50) 
-- CODE:
# Use este codigo como ponto de partida
num = 12
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print("dobro:",num*2)

-- EXECUTION TIME:
0.266209
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
dobro: 2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
dobro: 888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 02:10:19) 
-- CODE:
# Use este codigo como ponto de partida
num = 12
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)

-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 02:10:32) 
-- CODE:
# Use este codigo como ponto de partida
num = 12
# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)

-- EXECUTION TIME:
0.199633
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
